[gd_scene load_steps=5 format=3 uid="uid://0ufwb3s5ey30"]

[ext_resource type="Script" uid="uid://emihdntv5wed" path="res://scripts/wardrobe/desk_service_point.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b5i02up0x3qej" path="res://assets/sprites/placeholder/desk.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://ckyaef5gy7qrw" path="res://assets/sprites/placeholder/slot.png" id="3"]
[ext_resource type="Script" uid="uid://cio6mjjwij4eb" path="res://scripts/wardrobe/slot.gd" id="4"]

[node name="DeskServicePoint" type="Node2D"]
script = ExtResource("1")

[node name="DeskSprite" type="Sprite2D" parent="."]
scale = Vector2(0.45, 0.45)
texture = ExtResource("2")

[node name="DeskSlot" type="Node2D" parent="."]
position = Vector2(0, -20)
script = ExtResource("4")

[node name="SlotSprite" type="Sprite2D" parent="DeskSlot"]
scale = Vector2(0.35, 0.35)
texture = ExtResource("3")

[node name="ItemAnchor" type="Node2D" parent="DeskSlot"]

[node name="ClientVisual" type="ColorRect" parent="."]
offset_left = -21.0
offset_top = -83.0
offset_right = 21.0
offset_bottom = -41.0
mouse_filter = 2
color = Color(0.7, 0.7, 0.7, 1)

[node name="PatienceBarBg" type="ColorRect" parent="."]
offset_left = -35.0
offset_top = -96.0
offset_right = 35.0
offset_bottom = -88.0
mouse_filter = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="PatienceBarFill" type="ColorRect" parent="PatienceBarBg"]
layout_mode = 0
offset_right = 70.0
offset_bottom = 8.0
mouse_filter = 2
color = Color(0.35, 0.8, 0.45, 1)
